--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,6 @@
+@import url(fonts.css);
 #app {
-    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;;
     color: #4d4d4d;
     min-width: 550px;
     max-width: 850px;
