--- a/Origami/src/components/index.css
+++ b/Origami/src/components/index.css
@@ -1,6 +1,6 @@
 body {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 #layout {
@@ -19,11 +19,12 @@ body {
 }
 
 #logo{
-	margin-top: -10px;
+  margin-top: -10px;
 }
 
 #logo-login{
-	margin-top: 5px;
+  margin-top: 5px;
+  cursor: pointer;
 }
 
 #search{
